* cfganal.c (flow_depth_first_order_compute): Always 	increment dfsnum.
	* basic-block.h (flow_preorder_transversal_compute): Declare.
	* cfganal.c (flow_preorder_transversal_compute): Implement.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47868 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,11 @@
+Tue Dec 11 10:40:18 CET 2001  John Wehle  <john@feith.com>
+
+	* cfganal.c (flow_depth_first_order_compute): Always
+	increment dfsnum.
+
+	* basic-block.h (flow_preorder_transversal_compute): Declare.
+	* cfganal.c (flow_preorder_transversal_compute): Implement.
+
 Thu Dec  6 12:13:24 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfgcleanup.c (flow_find_cross_jump): Replace tests for note
