* gcc/configure.in: Hardcode that vfork works on VMS host. 	* gcc/configure: Regenerated. 	* libiberty/configure.in: Hardcode that vfork works on VMS host. 	* libiberty/configure: Regenerated.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47869 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -612,6 +612,12 @@ case "${host}" in
 *** UWIN may not be used as a host platform because
 *** linking with posix.dll is not allowed by the GNU GPL])
   ;;
+*-*-*vms*)
+  # Under VMS, vfork works very different than on Unix. The standard test 
+  # won't work, and it isn't easily adaptable. It makes more sense to
+  # just force it.
+  ac_cv_func_vfork_works=yes
+  ;;
 esac
 AC_FUNC_VFORK
 AC_FUNC_MMAP_ANYWHERE
