* bb-reorder.c: improved Software Trace Cache with duplication of basic 	blocks. 	* cfglayout.h: Added elements 'duplicated' and 'original' to struct 	reorder_block_def. 	* Makefile.in: Added dependencies on fibheap.h.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47878 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,11 @@
+Tue Dec 11 16:51:17 CET 2001  Josef Zlomek  <zlomek@matfyz.cz>
+
+	* bb-reorder.c: improved Software Trace Cache with duplication of basic
+	blocks.
+	* cfglayout.h: Added elements 'duplicated' and 'original' to struct
+	reorder_block_def.
+	* Makefile.in: Added dependencies on fibheap.h.
+
 Tue Dec 11 10:40:18 CET 2001  John Wehle  <john@feith.com>
 
 	* cfganal.c (flow_depth_first_order_compute): Always
