* java/lang/String.java (String): New constructor. 	* gnu/gcj/runtime/natStringBuffer.cc: New file. 	* gnu/gcj/runtime/StringBuffer.java: New file. 	* Makefile.in: Rebuilt. 	* Makefile.am (ordinary_java_source_files): Added 	gnu/gcj/runtime/StringBuffer.java. 	(nat_source_files): Added gnu/gcj/runtime/natStringBuffer.cc.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47883 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -1257,6 +1257,7 @@ gnu/gcj/runtime/FinalizerThread.java \
 gnu/gcj/runtime/FirstThread.java \
 gnu/gcj/runtime/JNIWeakRef.java \
 gnu/gcj/runtime/SharedLibLoader.java \
+gnu/gcj/runtime/StringBuffer.java \
 gnu/gcj/runtime/VMClassLoader.java \
 gnu/java/io/ClassLoaderObjectInputStream.java \
 gnu/java/io/NullOutputStream.java \
@@ -1617,6 +1618,7 @@ gnu/gcj/protocol/core/natCoreInputStream.cc \
 gnu/gcj/runtime/natFinalizerThread.cc \
 gnu/gcj/runtime/natFirstThread.cc \
 gnu/gcj/runtime/natSharedLibLoader.cc \
+gnu/gcj/runtime/natStringBuffer.cc \
 java/io/natFile.cc \
 java/io/natFileDescriptor.cc \
 java/io/natObjectInputStream.cc \
