* c-common.c (combine_strings): Complain if concatenating 	__FUNCTION__. 	* c-parse.in (yylexname): Flag artificial strings. 	* tree.h (TREE_ARTIFICIAL_STRING_P): New. doc: 	* extend.texi: Update. testsuite: 	* gcc.dg/concat.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47890 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -3604,6 +3604,7 @@ end ifobjc
 	    const char *name = fname_string (rid_code);
 	  
 	    yylval.ttype = build_string (strlen (name) + 1, name);
+	    C_ARTIFICIAL_STRING_P (yylval.ttype) = 1;
 	    last_token = CPP_STRING;  /* so yyerror won't choke */
 	    return STRING;
 	  }
