* predict.c (predicted_by_p): New static function. 	(last_basic_block_p): Rename from is_last_basic_block; update. 	(estimate_probability): Disable loop heuristics if CONTINUE is present; 	replace ERROR_RETURN by EARLY_RETURN heuristics; kill PRED_OPCODE_NONZERO 	heuristics. 	(process_note_prediction): Ignore ignore_in_last value; do not use 	PRED_ERROR_RETURN heuristics. 	* predict.def: Update probabilities; kill PRED_OPCODE_NONZERO 	and PRED_ERROR_RETURN; add PRED_EARLY_RETURN. 	* stmt.c (expand_continue_loop): Predict continue to happen.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47933 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,16 @@
+Wed Dec 12 09:49:17 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* predict.c (predicted_by_p): New static function.
+	(last_basic_block_p): Rename from is_last_basic_block; update.
+	(estimate_probability): Disable loop heuristics if CONTINUE is present;
+	replace ERROR_RETURN by EARLY_RETURN heuristics; kill PRED_OPCODE_NONZERO
+	heuristics.
+	(process_note_prediction): Ignore ignore_in_last value; do not use
+	PRED_ERROR_RETURN heuristics.
+	* predict.def: Update probabilities; kill PRED_OPCODE_NONZERO
+	and PRED_ERROR_RETURN; add PRED_EARLY_RETURN.
+	* stmt.c (expand_continue_loop): Predict continue to happen.
+
 Tue Dec 11 16:51:17 CET 2001  Josef Zlomek  <zlomek@matfyz.cz>
 
 	* bb-reorder.c: improved Software Trace Cache with duplication of basic
