--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Wed Dec 12 14:15:48 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* predict.c (estimate_probability): Distribute the loop exit
+	probability according to number of exit edges.
+
 Wed Dec 12 09:49:17 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* predict.c (predicted_by_p): New static function.
