--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,12 @@
+Wed Dec 12 15:30:25 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (insns_match_p): Break out from ...;
+	(flow_find_cross_jump): ... here;
+	(outgoing_edges_match): Add parameter MODE; attempt to match everything
+	except for tablejumps.
+	(try_crossjump_to_edge): Accept complex edges.
+	(try_crossjump_bb): Likewise.
+
 Wed Dec 12 14:15:48 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* predict.c (estimate_probability): Distribute the loop exit
