* tracer.c (DYNAMIC_COVERAGE, MAXIMAL_CODE_GROWTH): Use floating point 	value to hold ratio. 	(MIN_BRANCH_RATIO): New constant. 	(find_best_successor, find_best_predecessor): Use it. 	(tail_duplicate): Rescale floats to integers.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47939 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,11 @@
+Wed Dec 12 16:21:03 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* tracer.c (DYNAMIC_COVERAGE, MAXIMAL_CODE_GROWTH): Use floating point
+	value to hold ratio.
+	(MIN_BRANCH_RATIO): New constant.
+	(find_best_successor, find_best_predecessor): Use it.
+	(tail_duplicate): Rescale floats to integers.
+
 Wed Dec 12 15:50:18 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* predict.c (estimate_bb_frequencies): Do estimation even when
