* toplev.c (rest_of_compilation): Perform gcse after tracing.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48013 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Fri Dec 14 23:17:33 CET 2001  Jan Hubccka  <jh@suse.cz>
+
+	* toplev.c (rest_of_compilation): Perform gcse after tracing.
+
 Wed Dec 12 16:21:03 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* tracer.c (DYNAMIC_COVERAGE, MAXIMAL_CODE_GROWTH): Use floating point
