--- a/gcc/java/Make-lang.in
+++ b/gcc/java/Make-lang.in
@@ -149,7 +149,9 @@ java.rest.encap:
 
 java.info: $(srcdir)/java/gcj.info
 java.dvi: java/gcj.dvi
-java.generated-manpages:
+java.generated-manpages: $(srcdir)/java/gcj.1 $(srcdir)/java/gcjh.1 \
+	$(srcdir)/java/jv-scan.1 $(srcdir)/java/jcf-dump.1 \
+	$(srcdir)/java/gij.1
 
 # Install hooks:
 # jc1, gcj, jvgenmain, and gcjh are installed elsewhere as part
@@ -184,6 +186,12 @@ java.install-man:
 java.uninstall:
 	-rm -rf $(bindir)/$(JAVA_INSTALL_NAME)$(exeext)
 	-rm -rf $(bindir)/$(JAVA_CROSS_NAME)$(exeext)
+	-rm -rf $(man1dir)/$(JAVA_INSTALL_NAME)$(man1ext)
+	-rm -rf $(man1dir)/$(JAVA_CROSS_NAME)$(man1ext)
+	-rm -rf $(man1dir)/gcjh$(man1ext)
+	-rm -rf $(man1dir)/jv-scan$(man1ext)
+	-rm -rf $(man1dir)/jcf-dump$(man1ext)
+	-rm -rf $(man1dir)/gij$(man1ext)
 
 java.install-info: installdirs
 	if [ -f jc1$(exeext) ] ; then \
@@ -217,6 +225,9 @@ java.distclean:
 java.extraclean:
 java.maintainer-clean:
 	-rm -f java/parse.c java/parse-scan.c java/parse.output java/y.tab.c
+	-rm -f $(srcdir)/java/gcj.1 $(srcdir)/java/gcjh.1
+	-rm -f $(srcdir)/java/jv-scan.1 $(srcdir)/java/jcf-dump.1
+	-rm -f $(srcdir)/java/gij.1
 #
 # Stage hooks:
 # The main makefile has already created stage?/java.
@@ -309,3 +320,64 @@ java/gcj.dvi: $(srcdir)/java/gcj.texi $(srcdir)/doc/include/fdl.texi \
 	 $(srcdir)/doc/include/gpl.texi
 	s=`cd $(srcdir); pwd`; export s; \
 	cd java && $(TEXI2DVI) -I $$s/doc/include $$s/java/gcj.texi
+
+$(srcdir)/java/gcj.1: $(srcdir)/java/gcj.texi
+	-$(TEXI2POD) -D gcj < $(srcdir)/java/gcj.texi > java/gcj.pod
+	($(POD2MAN) --section=1 java/gcj.pod > java/gcj.1.T$$$$ && \
+		mv -f java/gcj.1.T$$$$ $(srcdir)/java/gcj.1) || \
+		(rm -f java/gcj.1.T$$$$ && exit 1)
+	rm -f java/gcj.pod
+
+$(srcdir)/java/gcjh.1: $(srcdir)/java/gcj.texi
+	-$(TEXI2POD) -D gcjh < $(srcdir)/java/gcj.texi > java/gcjh.pod
+	($(POD2MAN) --section=1 java/gcjh.pod > java/gcjh.1.T$$$$ && \
+		mv -f java/gcjh.1.T$$$$ $(srcdir)/java/gcjh.1) || \
+		(rm -f java/gcjh.1.T$$$$ && exit 1)
+	rm -f java/gcjh.pod
+
+$(srcdir)/java/jv-scan.1: $(srcdir)/java/gcj.texi
+	-$(TEXI2POD) -D jv-scan < $(srcdir)/java/gcj.texi > java/jv-scan.pod
+	($(POD2MAN) --section=1 java/jv-scan.pod > java/jv-scan.1.T$$$$ && \
+		mv -f java/jv-scan.1.T$$$$ $(srcdir)/java/jv-scan.1) || \
+		(rm -f java/jv-scan.1.T$$$$ && exit 1)
+	rm -f java/jv-scan.pod
+
+$(srcdir)/java/jcf-dump.1: $(srcdir)/java/gcj.texi
+	-$(TEXI2POD) -D jcf-dump < $(srcdir)/java/gcj.texi > java/jcf-dump.pod
+	($(POD2MAN) --section=1 java/jcf-dump.pod > java/jcf-dump.1.T$$$$ && \
+		mv -f java/jcf-dump.1.T$$$$ $(srcdir)/java/jcf-dump.1) || \
+		(rm -f java/jcf-dump.1.T$$$$ && exit 1)
+	rm -f java/jcf-dump.pod
+
+$(srcdir)/java/gij.1: $(srcdir)/java/gcj.texi
+	-$(TEXI2POD) -D gij < $(srcdir)/java/gcj.texi > java/gij.pod
+	($(POD2MAN) --section=1 java/gij.pod > java/gij.1.T$$$$ && \
+		mv -f java/gij.1.T$$$$ $(srcdir)/java/gij.1) || \
+		(rm -f java/gij.1.T$$$$ && exit 1)
+	rm -f java/gij.pod
+
+# Install the man pages.
+java.install-man: installdirs $(GENERATED_JAVA_MANPAGES)
+	-if [ -f $(GCJ)$(exeext) ]; then \
+	  if [ -f $(GCJ)-cross$(exeext) ]; then \
+	    rm -f $(man1dir)/$(JAVA_CROSS_NAME)$(man1ext); \
+	    $(INSTALL_DATA) $(srcdir)/java/gcj.1 $(man1dir)/$(JAVA_CROSS_NAME)$(man1ext); \
+	    chmod a-x $(man1dir)/$(JAVA_CROSS_NAME)$(man1ext); \
+	  else \
+	    rm -f $(man1dir)/$(JAVA_INSTALL_NAME)$(man1ext); \
+	    $(INSTALL_DATA) $(srcdir)/java/gcj.1 $(man1dir)/$(JAVA_INSTALL_NAME)$(man1ext); \
+	    chmod a-x $(man1dir)/$(JAVA_INSTALL_NAME)$(man1ext); \
+	  fi ; \
+	fi
+	-rm -f $(man1dir)/gcjh$(man1ext)
+	-$(INSTALL_DATA) $(srcdir)/java/gcjh.1 $(man1dir)/gcjh$(man1ext)
+	-chmod a-x $(man1dir)/gcjh$(man1ext)
+	-rm -f $(man1dir)/jv-scan$(man1ext)
+	-$(INSTALL_DATA) $(srcdir)/java/jv-scan.1 $(man1dir)/jv-scan$(man1ext)
+	-chmod a-x $(man1dir)/jv-scan$(man1ext)
+	-rm -f $(man1dir)/jcf-dump$(man1ext)
+	-$(INSTALL_DATA) $(srcdir)/java/jcf-dump.1 $(man1dir)/jcf-dump$(man1ext)
+	-chmod a-x $(man1dir)/jcf-dump$(man1ext)
+	-rm -f $(man1dir)/gij$(man1ext)
+	-$(INSTALL_DATA) $(srcdir)/java/gij.1 $(man1dir)/gij$(man1ext)
+	-chmod a-x $(man1dir)/gij$(man1ext)
